add styling and image

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Profile of Nathan Kinkade</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/css/reset.css">
@@ -10,7 +10,18 @@
 
     </head>
     <body>
+        <header>
+            <h1 id="greeting"></h1>
+        </header>
+        <main>
+            <img id="nathan" src="images/nathan.jpg" alt="Here's Nathan!">
+            
+        </main>
         
+        <footer>
+
+        </footer>
+
         <script src="/js/app.js"></script>
     </body>
 </html>
