--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
         </header>
         <main>
             <img id="nathan" src="images/nathan.jpg" alt="Here's Nathan!">
-            
+            <h2>Nathan Kinkade</h2>
+            <ul>
+                <li></li>
+            </ul>
         </main>
         
         <footer>
