add js with prompts and responses

--- a/index.html
+++ b/index.html
@@ -16,13 +16,20 @@
         <main>
             <img id="nathan" src="images/nathan.jpg" alt="Here's Nathan!">
             <h2>Nathan Kinkade</h2>
+            <p>Nathan is currently a student enrolled in <a href="https://www.deltavcodeschool.com/">DeltaV Code School</a> and has enjoyed every minute of the program so far. 
+                He is passionate about creating things from the ground up, so coding was the obvious choice.</p>
+            <p>DeltaV is not his first post-high school education, however. He also attended and graduated from the following schools/programs:</p>
             <ul>
-                <li></li>
+                <li><a href="https://www.rlc.edu/">Rend Lake College</a> - Graduated with an Associate of Arts and an Associate of Science</li>
+                <li><a href="https://siu.edu/">Southern Illinois University</a> - Graduated with a Bachelor of Science in Recreation</li>
             </ul>
+           <p id="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Felis eget nunc lobortis mattis aliquam faucibus purus. Posuere ac ut consequat semper viverra nam libero justo. Dolor sit amet consectetur adipiscing elit pellentesque habitant. Gravida rutrum quisque non tellus orci ac auctor augue mauris. Posuere ac ut consequat semper viverra nam libero justo. Morbi tincidunt ornare massa eget egestas purus viverra accumsan. Dictumst quisque sagittis purus sit amet volutpat consequat. Est ante in nibh mauris cursus mattis molestie a. Lorem mollis aliquam ut porttitor. Sit amet porttitor eget dolor morbi non.</p>
+           <p>Nulla posuere sollicitudin aliquam ultrices sagittis orci a. Imperdiet dui accumsan sit amet nulla. Urna porttitor rhoncus dolor purus. Justo nec ultrices dui sapien eget. Nisl nisi scelerisque eu ultrices vitae auctor. Nulla aliquet porttitor lacus luctus accumsan tortor posuere. Amet nulla facilisi morbi tempus iaculis urna. Tellus orci ac auctor augue mauris augue neque. Ornare arcu odio ut sem nulla pharetra diam sit amet. Interdum velit euismod in pellentesque. Parturient montes nascetur ridiculus mus mauris vitae ultricies. Est sit amet facilisis magna etiam. Lobortis feugiat vivamus at augue. Risus feugiat in ante metus dictum at tempor. Rutrum quisque non tellus orci ac auctor. Odio morbi quis commodo odio. Morbi tristique senectus et netus et malesuada fames ac. Suscipit tellus mauris a diam maecenas. Et tortor consequat id porta nibh venenatis cras. Libero justo laoreet sit amet cursus sit amet dictum.</p>
         </main>
         
         <footer>
-
+           <a href="https://www.deltavcodeschool.com/" id="footerLink">DeltaV Code School&copy;</a> 
+           <a href="mailto:nkkinkade@gmail.com" id="email">Email Nathan</a>
         </footer>
 
         <script src="/js/app.js"></script>
