--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <title>Profile of Nathan Kinkade</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/css/reset.css">
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/style.css">
 
     </head>
     <body>
@@ -32,6 +32,6 @@
            <a href="mailto:nkkinkade@gmail.com" id="email">Email Nathan</a>
         </footer>
 
-        <script src="/js/app.js"></script>
+        <script src="js/app.js"></script>
     </body>
 </html>
