--- a/index.html
+++ b/index.html
@@ -25,6 +25,22 @@
             </ul>
            <p id="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Felis eget nunc lobortis mattis aliquam faucibus purus. Posuere ac ut consequat semper viverra nam libero justo. Dolor sit amet consectetur adipiscing elit pellentesque habitant. Gravida rutrum quisque non tellus orci ac auctor augue mauris. Posuere ac ut consequat semper viverra nam libero justo. Morbi tincidunt ornare massa eget egestas purus viverra accumsan. Dictumst quisque sagittis purus sit amet volutpat consequat. Est ante in nibh mauris cursus mattis molestie a. Lorem mollis aliquam ut porttitor. Sit amet porttitor eget dolor morbi non.</p>
            <p>Nulla posuere sollicitudin aliquam ultrices sagittis orci a. Imperdiet dui accumsan sit amet nulla. Urna porttitor rhoncus dolor purus. Justo nec ultrices dui sapien eget. Nisl nisi scelerisque eu ultrices vitae auctor. Nulla aliquet porttitor lacus luctus accumsan tortor posuere. Amet nulla facilisi morbi tempus iaculis urna. Tellus orci ac auctor augue mauris augue neque. Ornare arcu odio ut sem nulla pharetra diam sit amet. Interdum velit euismod in pellentesque. Parturient montes nascetur ridiculus mus mauris vitae ultricies. Est sit amet facilisis magna etiam. Lobortis feugiat vivamus at augue. Risus feugiat in ante metus dictum at tempor. Rutrum quisque non tellus orci ac auctor. Odio morbi quis commodo odio. Morbi tristique senectus et netus et malesuada fames ac. Suscipit tellus mauris a diam maecenas. Et tortor consequat id porta nibh venenatis cras. Libero justo laoreet sit amet cursus sit amet dictum.</p>
+            <aside>
+                <h3>Nathan's top 10 favorite TV shows</h3>
+                <ol>
+                    <li>Trailer Park Boys</li>
+                    <li>The Office (US)</li>
+                    <li>Letterkenny</li>
+                    <li>Parks and Recreation</li>
+                    <li>Brooklyn 99</li>
+                    <li>Superstore</li>
+                    <li>It's Always Sunny in Philadelphia</li>
+                    <li>Bob's Burgers</li>
+                    <li>Game of Thrones</li>
+                    <li>American Horror Story</li>
+                </ol>
+                <img src="images/tpb.jpg">
+            </aside>
         </main>
         
         <footer>
@@ -32,6 +48,6 @@
            <a href="mailto:nkkinkade@gmail.com" id="email">Email Nathan</a>
         </footer>
 
-        <script src="js/app.js"></script>
+        <!-- <script src="js/app.js"></script> -->
     </body>
 </html>
