--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
            <a href="mailto:nkkinkade@gmail.com" id="email">Email Nathan</a>
         </footer>
 
-        <!-- <script src="js/app.js"></script> -->
+        <script src="js/app.js"></script>
     </body>
 </html>
