cleaned up commented out code plus add top 10 movies

--- a/index.html
+++ b/index.html
@@ -41,6 +41,23 @@
                 </ol>
                 <img src="images/tpb.jpg">
             </aside>
+            <aside id="movie">
+                <h3>Nathan's top 10 favorite Movies</h3>
+                <ol>
+                    <li>Mallrats</li>
+                    <li>The Big Lebowski</li>
+                    <li>Back to the Future II</li>
+                    <li>Ghostbusters</li>
+                    <li>Clerks</li>
+                    <li>Up in Smoke</li>
+                    <li>Pineapple Express</li>
+                    <li>Shaun of the Dead</li>
+                    <li>Monty Python and the Holy Grail</li>
+                    <li>Return of the Jedi</li>
+                </ol>
+                <img src="images/mallrats.jpg">
+            </aside>
+
         </main>
         
         <footer>
